IaC/kubernetes/apps/base/network/istio-config/app/mesh/mesh-destinationrule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mesh-default
  namespace: network
  labels:
    app.kubernetes.io/name: mesh-default-destinationrule
    app.kubernetes.io/component: service-mesh
    app.kubernetes.io/part-of: helix-platform
    app.kubernetes.io/managed-by: fluxcd
    helix.ai/component: service-mesh
spec:
  host: "*.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
